8145247: incorrect comment in SystemDictionary::load_shared_class

Reviewed-by: jiangli, ccheung, gtriantafill